--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,12 @@
 				top: 60px;
 				color: white;
 			}
+			code, pre {
+				background-color: white;
+				color: black;
+				border: 2px solid white;
+				border-radius: 5px;
+			}
 		</style>
 	</head>
 	<body>
